- Takdatahandler 3.4.4 -  which was rebuilt for CXF 4.1.5, which is built for Spring Boot 3, Spring Framework 6, Jakarta EE 10 etcetera. Version 4.2.0 is for SB4, EE11 etc. - Rearranged CXF imports and transports to align with CXF 4.1.5. - Moved around some properties and dependencies to sync better. - Replaced deprecated MockBeans with MockitoBeans. - Upgraded deprecated entities in PemConverterTest - Better Licensing files. - Extinguished a few other warnings and compile issues, and some other misc cleanups.